--- a/source/sass/state/_modifiers.scss
+++ b/source/sass/state/_modifiers.scss
@@ -19,6 +19,10 @@
     padding-left: $wrapper-padding;
     padding-right: $wrapper-padding;
     }
+.-wrap-w {
+    padding-left: $image-padding;
+    padding-right: $image-padding;
+    }
 .-wrap-l {
     padding-left: $wrapper-padding;
     }
