Refactor view logic so its DRY.

--- a/source/sass/config/_variables.scss
+++ b/source/sass/config/_variables.scss
@@ -15,7 +15,7 @@ $sans-text-medium-oblique: "GT-Walsheim-Medium-Oblique";
 
 $black: #000;
 $white: #fff;
-$spot: #fed412;
+$spot: #5a00ff;
 $grey-text: #a0a0a0;
 $grey-light: #e5e7e7;
 $grey-back: #fafafa;
