--- a/source/sass/core/_pages.scss
+++ b/source/sass/core/_pages.scss
@@ -8,17 +8,10 @@
     overflow: auto;
     padding-top: calc( #{$header-height} - 1px );
     top: 0;
-    transition: opacity $fast-duration $ease,
-                padding-left $long-duration $ease-cubic-sharp,
+    transition: padding-left $long-duration $ease-cubic-sharp,
                 transform $long-duration $ease-cubic-sharp;
     width: 100%;
     -webkit-overflow-scrolling: touch;
-
-    &.is-reactive {
-        }
-    &.is-inactive {
-        opacity: 0;
-        }
     }
 
 
