--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -108,7 +108,7 @@
 
         <!-- Splash -->
         <section class="intro js-intro screen ghost -text--center is-active">
-            <h1 class="h1 ghost__child -light">theindex.la</h1>
+            <h1 class="intro__text h1 ghost__child -light">index.la</h1>
         </section>
 
         <!-- Templates -->
