--- a/source/sass/core/_document.scss
+++ b/source/sass/core/_document.scss
@@ -6,7 +6,11 @@ html {
     box-sizing: border-box;
     overflow-x: hidden;
     overflow-y: auto;
-    transition: background-color $long-duration $ease;
+    transition: opacity $base-duration $ease;
+
+    &.is-inactive {
+        opacity: 0;
+        }
     }
 body {
     background-color: transparent;
