--- a/source/sass/modules/_screens.scss
+++ b/source/sass/modules/_screens.scss
@@ -28,3 +28,15 @@
 .intro {
     background-color: $spot;
     }
+.intro__text {
+    opacity: 0;
+    transform: translate3d( 0, $expander-one / 2, 0 );
+    transition: opacity $base-duration $ease,
+                transform $base-duration $ease;
+    }
+.intro.is-initialized {
+    .intro__text {
+        opacity: 1;
+        transform: translate3d( 0, 0, 0 );
+        }
+}
