--- a/source/sass/modules/_index.scss
+++ b/source/sass/modules/_index.scss
@@ -54,6 +54,11 @@
     position: fixed;
     top: 50%;
     transform: translateY( -50% );
+    transition: opacity $base-duration $ease;
+
+    &.is-inactive {
+        opacity: 0;
+        }
     }
 .artist__info__item {
     display: block;
