--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -108,7 +108,10 @@
 
         <!-- Splash -->
         <section class="intro js-intro screen ghost -text--center is-active">
-            <h1 class="intro__text h1 ghost__child -light">index.la</h1>
+            <h1 class="intro__text h1 ghost__child -light">theindex.la</h1>
+            <div class="intro__load">
+                <div class="intro__load__fill js-intro-fill"></div>
+            </div>
         </section>
 
         <!-- Templates -->
