Circle CI Configuration.

--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -8,6 +8,30 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <meta name="apple-mobile-web-app-title" content="theindex.la" />
         <meta name="format-detection" content="telephone=no" />
+        <meta name="description" content="" />
+
+        <meta property="og:site_name" content="theindex.la" />
+        <meta property="og:title" content="theindex.la" />
+        <meta property="og:url" content="http://theindex.la" />
+        <meta property="og:type" content="website" />
+        <meta property="og:description" content="" />
+        <meta property="og:image" content="" />
+
+        <meta itemprop="name" content="theindex.la" />
+        <meta itemprop="description" content="" />
+        <meta itemprop="url" content="http://theindex.la" />
+        <meta itemprop="thumbnailUrl" content="" />
+        <meta itemprop="image" content="" />
+
+        <meta name="twitter:title" content="theindex.la" />
+        <meta name="twitter:image" content="" />
+        <meta name="twitter:url" content="http://theindex.la" />
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:description" content="" />
+
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+        <link rel="canonical" href="http://theindex.la" />
+        <link rel="image_src" href="" />
         <link rel="apple-touch-icon-precomposed" href="/images/touchicon.png" />
 
         <!-- Title -->
