remove agency refs. update featured => features in client app.

--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -9,6 +9,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <meta name="apple-mobile-web-app-title" content="<%= locals.meta[ 0 ].data[ 'meta.title' ].value %>" />
+        <!-- <meta name="google-site-verification" content="Vh3Illw1b-CLRJOCLhTnM5DUkdoFDcK1NORSrt1MATs" /> -->
 
         <meta property="og:site_name" content="<%= locals.meta[ 0 ].data[ 'meta.title' ].value %>" />
         <meta property="og:title" content="<%= locals.meta[ 0 ].data[ 'meta.title' ].value %>" />
